@@ -94,9 +94,9 @@ class Hyphenator:
 		throw (uno::RuntimeException);
 
 	// Static methods
-	static inline SAL_CALL OUString getImplementationName_static();
-	static inline SAL_CALL uno::Sequence<OUString> getSupportedServiceNames_static();
-	static SAL_CALL uno::Reference<XInterface> get(uno::Reference<uno::XComponentContext> const & context);
+	static OUString getImplementationName_static();
+	static uno::Sequence<OUString> getSupportedServiceNames_static();
+	static uno::Reference<XInterface> get(uno::Reference<uno::XComponentContext> const & context);
 
 	private:
 	explicit Hyphenator(uno::Reference<uno::XComponentContext> const & context);
@@ -105,17 +105,6 @@ class Hyphenator:
 
 	uno::Reference<uno::XComponentContext> compContext;
 };
-
-// Static method implementations
-inline OUString SAL_CALL Hyphenator::getImplementationName_static() {
-	return A2OU("voikko.Hyphenator");
-}
-inline uno::Sequence<OUString> SAL_CALL Hyphenator::getSupportedServiceNames_static() {
-	uno::Sequence<OUString> snames(1);
-	snames.getArray()[0] = A2OU("com.sun.star.linguistic2.Hyphenator");
-	return snames;
-}
-
 
 }
 
